Scrollbar update and bug fixes
Added scrollbar for generators table. Replacing right floating actions
menu with a fixed top one. Restoring opacity when clicking another tab
(in case of error). Fixed bug with Generators tab in View mode.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -350,10 +350,16 @@ button.closeLike {
 }
 .actionsToolbar {
     padding: 0px;
-    z-index: 1;
+    border: 1px solid #ddd;
+    width: 100%;
+    margin-top: 5px;
+/*    z-index: 1;
     position: fixed;
     float:right;
-    right:0px;
+    right:0px;*/
+}
+.actionsToolbar>button {
+    border: none;
 }
 
 .additional {
